--- a/views/contact.pug
+++ b/views/contact.pug
@@ -3,3 +3,9 @@ html
         title= title 
     body 
         h1= message
+        nav
+            a(href='/') Home
+            a(href='/about') About
+            a(href='/blog') Blog
+            a(href='/portfolio') Portfolio
+            a(href='/contact') Contact
